- bugfix

future release (aka current master branch):
-  fix crash when proxy is enabled but no proper proxy settings are set
-  fix typo in download speed display
+  moved proxy user to keyring
-  fixed proxy support not being installed from requirements.txt
-  added two japanese psn titleid to titledb
+  added updater for titledb
+  added download verification to auto updater

v010:
-  fix a crash when checking updates
+  add info about the ps3 store shutdown

v009:
+  update turkish translation
+  use UPX for builds to produce smaller binaries and hopefully slightly less antivirus false positives
+  added an icon to the executable and the windows
-  fix cut off header in build.log
-  removed hotfix for issues between keyring and PyInstaller
-  fix crash when downloading updates
-  fix finding updates on modern linux

v008:
!  refactored gui code
!  more secure handling of sonys self signed certificate
+  open configuration window when no configuration file is found
+  generate "build.log" when building releases
+  include pysimplegui version in logs for easier debugging
+  include python version in logs for easier debugging
+  proxy support (only SOCKS5)
+  improve configuration window layout
+  add CHANGELOG to builds
+  add thai translation thanks to https://github.com/CENSOR1337
+  add russian translation thanks to https://github.com/andoleal
+  add turkish translation thanks to https://steamcommunity.com/profiles/76561198045705212/
+  add italian translation thanks to https://github.com/Strappazzon
-  fix changelog being cutoff in update notification window
-  fix updater on linux
-  fix handling unicode languages
-  minor typos in english translation
-  fix cutoff strings
-  fix crash when available disc space is below threshold
-  hotfix for issues between keyring and PyInstaller
-  inform user when no viable keyring backend could be found

v007:
-  fixed main window becoming malfunctional when pressing download in the queue window with an empty queue